--- a/batteryview.css
+++ b/batteryview.css
@@ -8,11 +8,8 @@
 
 .battery-item {
     background-color: #fff;
-    /* İç kısım beyaz */
     border: 2px solid #007bff;
-    /* Dış çerçeve mavi */
     border-radius: 8px;
-    /* Hafif oval köşeler */
     padding: 20px;
     text-align: center;
     font-weight: bold;
@@ -55,6 +52,60 @@
     margin-right: 5px;
 }
 
+.details-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 800px;
+    background-color: #fff;
+    border: 2px solid #007bff;
+    border-radius: 8px;
+    padding: 20px;
+    text-align: left;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow-y: auto;
+    /* İçerik taşarsa kaydırma çubuğu ekler */
+    max-height: 80vh;
+    /* Maksimum yüksekliği %80 viewport yüksekliğine ayarlandı */
+}
+
+.battery-info {
+    font-weight: bold;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.details-separator {
+    border: none;
+    border-top: 2px solid #007bff;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 1.5em;
+    cursor: pointer;
+    color: #007bff;
+}
+
+.close-button:hover {
+    color: #0056b3;
+}
+
+.chart-container {
+    margin-top: 10px;
+    min-height: 175px;
+    /* Minimum yüksekliği 175px olarak ayarlandı */
+    height: 175px;
+    /* Yükseklik ayarlandı */
+}
+
 /* Dark mode */
 .dark-mode .battery-item {
     background-color: #333;
@@ -70,5 +121,27 @@
 .dark-mode .battery-number {
     background-color: #444;
     border-color: #666;
+    color: #dcdcdc;
+}
+
+.dark-mode .details-container {
+    background-color: #333;
+    border-color: #555;
+    color: #dcdcdc;
+}
+
+.dark-mode .details-separator {
+    border-top-color: #555;
+}
+
+.dark-mode .close-button {
+    color: #dcdcdc;
+}
+
+.dark-mode .close-button:hover {
+    color: #fff;
+}
+
+.dark-mode .chart-container {
     color: #dcdcdc;
 }
