Uptaded batterview added new content

--- a/batteryview.css
+++ b/batteryview.css
@@ -65,9 +65,7 @@
     text-align: left;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow-y: auto;
-    /* İçerik taşarsa kaydırma çubuğu ekler */
     max-height: 80vh;
-    /* Maksimum yüksekliği %80 viewport yüksekliğine ayarlandı */
 }
 
 .battery-info {
@@ -101,10 +99,25 @@
 .chart-container {
     margin-top: 10px;
     min-height: 175px;
-    /* Minimum yüksekliği 175px olarak ayarlandı */
     height: 175px;
-    /* Yükseklik ayarlandı */
 }
+
+.additional-item {
+    background-color: #fff;
+    border: 2px solid #007bff;
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.info-item {
+    margin-bottom: 5px;
+    font-size: 1em;
+}
+
 
 /* Dark mode */
 .dark-mode .battery-item {
