--- a/batteryview.css
+++ b/batteryview.css
@@ -106,11 +106,13 @@
     background-color: #fff;
     border: 2px solid #007bff;
     border-radius: 8px;
-    padding: 20px;
+    padding: 10px; 
     text-align: center;
     font-weight: bold;
-    margin-top: 20px;
+    margin: 20px auto; /* Burada margin özelliğini güncelledik */
     transition: background-color 0.3s, border-color 0.3s;
+    width: 200px;
+    height: 100px;
 }
 
 .info-item {
