--- a/batteryview.css
+++ b/batteryview.css
@@ -111,8 +111,8 @@
     font-weight: bold;
     margin: 20px auto;
     transition: background-color 0.3s, border-color 0.3s;
-    width: 300px;
-    height: 100px;
+    width: 180px;
+    height: 110px;
 }
 
 .info-item {
@@ -120,7 +120,14 @@
     font-size: 1em;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start; /* İkon ve değeri yan yana hizalar */
+    width: 100%; /* Tüm genişliği kaplamasını sağlar */
+}
+
+.info-item span {
+    min-width: 50px; /* Değerlerin minimum genişliği */
+    text-align: left; /* Değerlerin hizalanmasını sola ayarlar */
+    margin-left: 10px; /* İkon ve değer arasında boşluk oluşturur */
 }
 
 .info-item i {
