--- a/batteryview.css
+++ b/batteryview.css
@@ -120,18 +120,29 @@
     font-size: 1em;
     display: flex;
     align-items: center;
-    justify-content: flex-start; /* İkon ve değeri yan yana hizalar */
-    width: 100%; /* Tüm genişliği kaplamasını sağlar */
+    justify-content: flex-start;
+    width: 100%;
 }
 
 .info-item span {
-    min-width: 50px; /* Değerlerin minimum genişliği */
-    text-align: left; /* Değerlerin hizalanmasını sola ayarlar */
-    margin-left: 10px; /* İkon ve değer arasında boşluk oluşturur */
+    min-width: 50px;
+    text-align: left;
+    margin-left: 10px;
 }
 
 .info-item i {
     margin-right: 5px;
+    position: relative;
+}
+
+.additional-item .info-item::before {
+    content: '';
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    background-color: black;
+    border-radius: 50%;
+    margin-right: 10px;
 }
 
 /* Dark mode */
