--- a/batteryview.css
+++ b/batteryview.css
@@ -64,10 +64,9 @@
     padding: 20px;
     text-align: left;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    overflow-y: auto;
-    max-height: 80vh;
+    overflow: hidden; 
+    height: 80vh; 
 }
-
 .battery-info {
     font-weight: bold;
     font-size: 1.2em;
